c/examples/writing-a-c-compiler-tests/tests/chapter_17/valid/libraries/sizeof_extern_client.c

extern double large_array[1000][2000];

int main(void) {
    return sizeof large_array == 16000000;
}